qt/webkit/gen_qwebpage.h

typedef QWebPage::ExtensionOption QWebPage__ExtensionOption;
typedef QWebPage::ExtensionReturn QWebPage__ExtensionReturn;
typedef QWebPage::ViewportAttributes QWebPage__ViewportAttributes;
typedef struct QAction QAction;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QEvent QEvent;
typedef struct QMenu QMenu;
typedef struct QMetaObject QMetaObject;
typedef struct QNetworkAccessManager QNetworkAccessManager;
typedef struct QNetworkReply QNetworkReply;
typedef struct QNetworkRequest QNetworkRequest;
typedef struct QObject QObject;
typedef struct QPalette QPalette;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QUndoStack QUndoStack;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWebElement QWebElement;
typedef struct QWebFrame QWebFrame;
typedef struct QWebHistory QWebHistory;
typedef struct QWebPage QWebPage;
typedef struct QWebPage__ExtensionOption QWebPage__ExtensionOption;
typedef struct QWebPage__ExtensionReturn QWebPage__ExtensionReturn;
typedef struct QWebPage__ViewportAttributes QWebPage__ViewportAttributes;
typedef struct QWebPluginFactory QWebPluginFactory;
typedef struct QWebSecurityOrigin QWebSecurityOrigin;
typedef struct QWebSettings QWebSettings;
typedef struct QWidget QWidget;
QWebPage* QWebPage_new();
QWebPage* QWebPage_new2(QObject* parent);
QMetaObject* QWebPage_metaObject(const QWebPage* self);
void* QWebPage_metacast(QWebPage* self, const char* param1);
int QWebPage_metacall(QWebPage* self, int param1, int param2, void** param3);
struct miqt_string QWebPage_tr(const char* s);
struct miqt_string QWebPage_trUtf8(const char* s);
QWebFrame* QWebPage_mainFrame(const QWebPage* self);
QWebFrame* QWebPage_currentFrame(const QWebPage* self);
QWebFrame* QWebPage_frameAt(const QWebPage* self, QPoint* pos);
QWebHistory* QWebPage_history(const QWebPage* self);
QWebSettings* QWebPage_settings(const QWebPage* self);
void QWebPage_setView(QWebPage* self, QWidget* view);
QWidget* QWebPage_view(const QWebPage* self);
bool QWebPage_isModified(const QWebPage* self);
QUndoStack* QWebPage_undoStack(const QWebPage* self);
void QWebPage_setNetworkAccessManager(QWebPage* self, QNetworkAccessManager* manager);
QNetworkAccessManager* QWebPage_networkAccessManager(const QWebPage* self);
void QWebPage_setPluginFactory(QWebPage* self, QWebPluginFactory* factory);
QWebPluginFactory* QWebPage_pluginFactory(const QWebPage* self);
unsigned long long QWebPage_totalBytes(const QWebPage* self);
unsigned long long QWebPage_bytesReceived(const QWebPage* self);
int QWebPage_visibilityState(const QWebPage* self);
void QWebPage_setVisibilityState(QWebPage* self, int visibilityState);
bool QWebPage_recentlyAudible(const QWebPage* self);
bool QWebPage_hasSelection(const QWebPage* self);
struct miqt_string QWebPage_selectedText(const QWebPage* self);
struct miqt_string QWebPage_selectedHtml(const QWebPage* self);
QAction* QWebPage_action(const QWebPage* self, int action);
QAction* QWebPage_customAction(const QWebPage* self, int action);
void QWebPage_triggerAction(QWebPage* self, int action, bool checked);
void QWebPage_setDevicePixelRatio(QWebPage* self, double ratio);
double QWebPage_devicePixelRatio(const QWebPage* self);
void QWebPage_resetDevicePixelRatio(QWebPage* self);
QSize* QWebPage_viewportSize(const QWebPage* self);
void QWebPage_setViewportSize(const QWebPage* self, QSize* size);
QWebPage__ViewportAttributes* QWebPage_viewportAttributesForSize(const QWebPage* self, QSize* availableSize);
QSize* QWebPage_preferredContentsSize(const QWebPage* self);
void QWebPage_setPreferredContentsSize(const QWebPage* self, QSize* size);
void QWebPage_setActualVisibleContentRect(const QWebPage* self, QRect* rect);
bool QWebPage_event(QWebPage* self, QEvent* param1);
bool QWebPage_focusNextPrevChild(QWebPage* self, bool next);
QVariant* QWebPage_inputMethodQuery(const QWebPage* self, int property);
bool QWebPage_findText(QWebPage* self, struct miqt_string subString);
void QWebPage_setForwardUnsupportedContent(QWebPage* self, bool forward);
bool QWebPage_forwardUnsupportedContent(const QWebPage* self);
void QWebPage_setLinkDelegationPolicy(QWebPage* self, int policy);
int QWebPage_linkDelegationPolicy(const QWebPage* self);
void QWebPage_setPalette(QWebPage* self, QPalette* palette);
QPalette* QWebPage_palette(const QWebPage* self);
void QWebPage_setContentEditable(QWebPage* self, bool editable);
bool QWebPage_isContentEditable(const QWebPage* self);
bool QWebPage_swallowContextMenuEvent(QWebPage* self, QContextMenuEvent* event);
void QWebPage_updatePositionDependentActions(QWebPage* self, QPoint* pos);
QMenu* QWebPage_createStandardContextMenu(QWebPage* self);
void QWebPage_setFeaturePermission(QWebPage* self, QWebFrame* frame, int feature, int policy);
struct miqt_array /* of struct miqt_string */  QWebPage_supportedContentTypes(const QWebPage* self);
bool QWebPage_supportsContentType(const QWebPage* self, struct miqt_string mimeType);
bool QWebPage_extension(QWebPage* self, int extension, QWebPage__ExtensionOption* option, QWebPage__ExtensionReturn* output);
bool QWebPage_supportsExtension(const QWebPage* self, int extension);
bool QWebPage_shouldInterruptJavaScript(QWebPage* self);
void QWebPage_loadStarted(QWebPage* self);
void QWebPage_connect_loadStarted(QWebPage* self, intptr_t slot);
void QWebPage_loadProgress(QWebPage* self, int progress);
void QWebPage_connect_loadProgress(QWebPage* self, intptr_t slot);
void QWebPage_loadFinished(QWebPage* self, bool ok);
void QWebPage_connect_loadFinished(QWebPage* self, intptr_t slot);
void QWebPage_linkHovered(QWebPage* self, struct miqt_string link, struct miqt_string title, struct miqt_string textContent);
void QWebPage_connect_linkHovered(QWebPage* self, intptr_t slot);
void QWebPage_statusBarMessage(QWebPage* self, struct miqt_string text);
void QWebPage_connect_statusBarMessage(QWebPage* self, intptr_t slot);
void QWebPage_selectionChanged(QWebPage* self);
void QWebPage_connect_selectionChanged(QWebPage* self, intptr_t slot);
void QWebPage_frameCreated(QWebPage* self, QWebFrame* frame);
void QWebPage_connect_frameCreated(QWebPage* self, intptr_t slot);
void QWebPage_geometryChangeRequested(QWebPage* self, QRect* geom);
void QWebPage_connect_geometryChangeRequested(QWebPage* self, intptr_t slot);
void QWebPage_repaintRequested(QWebPage* self, QRect* dirtyRect);
void QWebPage_connect_repaintRequested(QWebPage* self, intptr_t slot);
void QWebPage_scrollRequested(QWebPage* self, int dx, int dy, QRect* scrollViewRect);
void QWebPage_connect_scrollRequested(QWebPage* self, intptr_t slot);
void QWebPage_windowCloseRequested(QWebPage* self);
void QWebPage_connect_windowCloseRequested(QWebPage* self, intptr_t slot);
void QWebPage_printRequested(QWebPage* self, QWebFrame* frame);
void QWebPage_connect_printRequested(QWebPage* self, intptr_t slot);
void QWebPage_linkClicked(QWebPage* self, QUrl* url);
void QWebPage_connect_linkClicked(QWebPage* self, intptr_t slot);
void QWebPage_toolBarVisibilityChangeRequested(QWebPage* self, bool visible);
void QWebPage_connect_toolBarVisibilityChangeRequested(QWebPage* self, intptr_t slot);
void QWebPage_statusBarVisibilityChangeRequested(QWebPage* self, bool visible);
void QWebPage_connect_statusBarVisibilityChangeRequested(QWebPage* self, intptr_t slot);
void QWebPage_menuBarVisibilityChangeRequested(QWebPage* self, bool visible);
void QWebPage_connect_menuBarVisibilityChangeRequested(QWebPage* self, intptr_t slot);
void QWebPage_unsupportedContent(QWebPage* self, QNetworkReply* reply);
void QWebPage_connect_unsupportedContent(QWebPage* self, intptr_t slot);
void QWebPage_downloadRequested(QWebPage* self, QNetworkRequest* request);
void QWebPage_connect_downloadRequested(QWebPage* self, intptr_t slot);
void QWebPage_focusedElementChanged(QWebPage* self, QWebElement* element);
void QWebPage_connect_focusedElementChanged(QWebPage* self, intptr_t slot);
void QWebPage_microFocusChanged(QWebPage* self);
void QWebPage_connect_microFocusChanged(QWebPage* self, intptr_t slot);
void QWebPage_contentsChanged(QWebPage* self);
void QWebPage_connect_contentsChanged(QWebPage* self, intptr_t slot);
void QWebPage_databaseQuotaExceeded(QWebPage* self, QWebFrame* frame, struct miqt_string databaseName);
void QWebPage_connect_databaseQuotaExceeded(QWebPage* self, intptr_t slot);
void QWebPage_applicationCacheQuotaExceeded(QWebPage* self, QWebSecurityOrigin* origin, unsigned long long defaultOriginQuota, unsigned long long totalSpaceNeeded);
void QWebPage_connect_applicationCacheQuotaExceeded(QWebPage* self, intptr_t slot);