qt/webkit/gen_qwebpage.nim


proc fcQWebPage_new(): ptr cQWebPage {.importc: "QWebPage_new".}
proc fcQWebPage_new2(parent: pointer): ptr cQWebPage {.importc: "QWebPage_new2".}
proc fcQWebPage_metaObject(self: pointer, ): pointer {.importc: "QWebPage_metaObject".}
proc fcQWebPage_metacast(self: pointer, param1: cstring): pointer {.importc: "QWebPage_metacast".}
proc fcQWebPage_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QWebPage_metacall".}
proc fcQWebPage_tr(s: cstring): struct_miqt_string {.importc: "QWebPage_tr".}
proc fcQWebPage_trUtf8(s: cstring): struct_miqt_string {.importc: "QWebPage_trUtf8".}
proc fcQWebPage_mainFrame(self: pointer, ): pointer {.importc: "QWebPage_mainFrame".}
proc fcQWebPage_currentFrame(self: pointer, ): pointer {.importc: "QWebPage_currentFrame".}
proc fcQWebPage_frameAt(self: pointer, pos: pointer): pointer {.importc: "QWebPage_frameAt".}
proc fcQWebPage_history(self: pointer, ): pointer {.importc: "QWebPage_history".}
proc fcQWebPage_settings(self: pointer, ): pointer {.importc: "QWebPage_settings".}
proc fcQWebPage_setView(self: pointer, view: pointer): void {.importc: "QWebPage_setView".}
proc fcQWebPage_view(self: pointer, ): pointer {.importc: "QWebPage_view".}
proc fcQWebPage_isModified(self: pointer, ): bool {.importc: "QWebPage_isModified".}
proc fcQWebPage_undoStack(self: pointer, ): pointer {.importc: "QWebPage_undoStack".}
proc fcQWebPage_setNetworkAccessManager(self: pointer, manager: pointer): void {.importc: "QWebPage_setNetworkAccessManager".}
proc fcQWebPage_networkAccessManager(self: pointer, ): pointer {.importc: "QWebPage_networkAccessManager".}
proc fcQWebPage_setPluginFactory(self: pointer, factory: pointer): void {.importc: "QWebPage_setPluginFactory".}
proc fcQWebPage_pluginFactory(self: pointer, ): pointer {.importc: "QWebPage_pluginFactory".}
proc fcQWebPage_totalBytes(self: pointer, ): culonglong {.importc: "QWebPage_totalBytes".}
proc fcQWebPage_bytesReceived(self: pointer, ): culonglong {.importc: "QWebPage_bytesReceived".}
proc fcQWebPage_visibilityState(self: pointer, ): cint {.importc: "QWebPage_visibilityState".}
proc fcQWebPage_setVisibilityState(self: pointer, visibilityState: cint): void {.importc: "QWebPage_setVisibilityState".}
proc fcQWebPage_recentlyAudible(self: pointer, ): bool {.importc: "QWebPage_recentlyAudible".}
proc fcQWebPage_hasSelection(self: pointer, ): bool {.importc: "QWebPage_hasSelection".}
proc fcQWebPage_selectedText(self: pointer, ): struct_miqt_string {.importc: "QWebPage_selectedText".}
proc fcQWebPage_selectedHtml(self: pointer, ): struct_miqt_string {.importc: "QWebPage_selectedHtml".}
proc fcQWebPage_action(self: pointer, action: cint): pointer {.importc: "QWebPage_action".}
proc fcQWebPage_customAction(self: pointer, action: cint): pointer {.importc: "QWebPage_customAction".}
proc fcQWebPage_triggerAction(self: pointer, action: cint, checked: bool): void {.importc: "QWebPage_triggerAction".}
proc fcQWebPage_setDevicePixelRatio(self: pointer, ratio: float64): void {.importc: "QWebPage_setDevicePixelRatio".}
proc fcQWebPage_devicePixelRatio(self: pointer, ): float64 {.importc: "QWebPage_devicePixelRatio".}
proc fcQWebPage_resetDevicePixelRatio(self: pointer, ): void {.importc: "QWebPage_resetDevicePixelRatio".}
proc fcQWebPage_viewportSize(self: pointer, ): pointer {.importc: "QWebPage_viewportSize".}
proc fcQWebPage_setViewportSize(self: pointer, size: pointer): void {.importc: "QWebPage_setViewportSize".}
proc fcQWebPage_viewportAttributesForSize(self: pointer, availableSize: pointer): pointer {.importc: "QWebPage_viewportAttributesForSize".}
proc fcQWebPage_preferredContentsSize(self: pointer, ): pointer {.importc: "QWebPage_preferredContentsSize".}
proc fcQWebPage_setPreferredContentsSize(self: pointer, size: pointer): void {.importc: "QWebPage_setPreferredContentsSize".}
proc fcQWebPage_setActualVisibleContentRect(self: pointer, rect: pointer): void {.importc: "QWebPage_setActualVisibleContentRect".}
proc fcQWebPage_event(self: pointer, param1: pointer): bool {.importc: "QWebPage_event".}
proc fcQWebPage_focusNextPrevChild(self: pointer, next: bool): bool {.importc: "QWebPage_focusNextPrevChild".}
proc fcQWebPage_inputMethodQuery(self: pointer, property: cint): pointer {.importc: "QWebPage_inputMethodQuery".}
proc fcQWebPage_findText(self: pointer, subString: struct_miqt_string): bool {.importc: "QWebPage_findText".}
proc fcQWebPage_setForwardUnsupportedContent(self: pointer, forward: bool): void {.importc: "QWebPage_setForwardUnsupportedContent".}
proc fcQWebPage_forwardUnsupportedContent(self: pointer, ): bool {.importc: "QWebPage_forwardUnsupportedContent".}
proc fcQWebPage_setLinkDelegationPolicy(self: pointer, policy: cint): void {.importc: "QWebPage_setLinkDelegationPolicy".}
proc fcQWebPage_linkDelegationPolicy(self: pointer, ): cint {.importc: "QWebPage_linkDelegationPolicy".}
proc fcQWebPage_setPalette(self: pointer, palette: pointer): void {.importc: "QWebPage_setPalette".}
proc fcQWebPage_palette(self: pointer, ): pointer {.importc: "QWebPage_palette".}
proc fcQWebPage_setContentEditable(self: pointer, editable: bool): void {.importc: "QWebPage_setContentEditable".}
proc fcQWebPage_isContentEditable(self: pointer, ): bool {.importc: "QWebPage_isContentEditable".}
proc fcQWebPage_swallowContextMenuEvent(self: pointer, event: pointer): bool {.importc: "QWebPage_swallowContextMenuEvent".}
proc fcQWebPage_updatePositionDependentActions(self: pointer, pos: pointer): void {.importc: "QWebPage_updatePositionDependentActions".}
proc fcQWebPage_createStandardContextMenu(self: pointer, ): pointer {.importc: "QWebPage_createStandardContextMenu".}
proc fcQWebPage_setFeaturePermission(self: pointer, frame: pointer, feature: cint, policy: cint): void {.importc: "QWebPage_setFeaturePermission".}
proc fcQWebPage_supportedContentTypes(self: pointer, ): struct_miqt_array {.importc: "QWebPage_supportedContentTypes".}
proc fcQWebPage_supportsContentType(self: pointer, mimeType: struct_miqt_string): bool {.importc: "QWebPage_supportsContentType".}
proc fcQWebPage_extension(self: pointer, extension: cint, option: pointer, output: pointer): bool {.importc: "QWebPage_extension".}
proc fcQWebPage_supportsExtension(self: pointer, extension: cint): bool {.importc: "QWebPage_supportsExtension".}
proc fcQWebPage_shouldInterruptJavaScript(self: pointer, ): bool {.importc: "QWebPage_shouldInterruptJavaScript".}
proc fcQWebPage_loadStarted(self: pointer, ): void {.importc: "QWebPage_loadStarted".}
proc fQWebPage_connect_loadStarted(self: pointer, slot: int) {.importc: "QWebPage_connect_loadStarted".}
proc fcQWebPage_loadProgress(self: pointer, progress: cint): void {.importc: "QWebPage_loadProgress".}
proc fQWebPage_connect_loadProgress(self: pointer, slot: int) {.importc: "QWebPage_connect_loadProgress".}
proc fcQWebPage_loadFinished(self: pointer, ok: bool): void {.importc: "QWebPage_loadFinished".}
proc fQWebPage_connect_loadFinished(self: pointer, slot: int) {.importc: "QWebPage_connect_loadFinished".}
proc fcQWebPage_linkHovered(self: pointer, link: struct_miqt_string, title: struct_miqt_string, textContent: struct_miqt_string): void {.importc: "QWebPage_linkHovered".}
proc fQWebPage_connect_linkHovered(self: pointer, slot: int) {.importc: "QWebPage_connect_linkHovered".}
proc fcQWebPage_statusBarMessage(self: pointer, text: struct_miqt_string): void {.importc: "QWebPage_statusBarMessage".}
proc fQWebPage_connect_statusBarMessage(self: pointer, slot: int) {.importc: "QWebPage_connect_statusBarMessage".}
proc fcQWebPage_selectionChanged(self: pointer, ): void {.importc: "QWebPage_selectionChanged".}
proc fQWebPage_connect_selectionChanged(self: pointer, slot: int) {.importc: "QWebPage_connect_selectionChanged".}
proc fcQWebPage_frameCreated(self: pointer, frame: pointer): void {.importc: "QWebPage_frameCreated".}
proc fQWebPage_connect_frameCreated(self: pointer, slot: int) {.importc: "QWebPage_connect_frameCreated".}
proc fcQWebPage_geometryChangeRequested(self: pointer, geom: pointer): void {.importc: "QWebPage_geometryChangeRequested".}
proc fQWebPage_connect_geometryChangeRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_geometryChangeRequested".}
proc fcQWebPage_repaintRequested(self: pointer, dirtyRect: pointer): void {.importc: "QWebPage_repaintRequested".}
proc fQWebPage_connect_repaintRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_repaintRequested".}
proc fcQWebPage_scrollRequested(self: pointer, dx: cint, dy: cint, scrollViewRect: pointer): void {.importc: "QWebPage_scrollRequested".}
proc fQWebPage_connect_scrollRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_scrollRequested".}
proc fcQWebPage_windowCloseRequested(self: pointer, ): void {.importc: "QWebPage_windowCloseRequested".}
proc fQWebPage_connect_windowCloseRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_windowCloseRequested".}
proc fcQWebPage_printRequested(self: pointer, frame: pointer): void {.importc: "QWebPage_printRequested".}
proc fQWebPage_connect_printRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_printRequested".}
proc fcQWebPage_linkClicked(self: pointer, url: pointer): void {.importc: "QWebPage_linkClicked".}
proc fQWebPage_connect_linkClicked(self: pointer, slot: int) {.importc: "QWebPage_connect_linkClicked".}
proc fcQWebPage_toolBarVisibilityChangeRequested(self: pointer, visible: bool): void {.importc: "QWebPage_toolBarVisibilityChangeRequested".}
proc fQWebPage_connect_toolBarVisibilityChangeRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_toolBarVisibilityChangeRequested".}
proc fcQWebPage_statusBarVisibilityChangeRequested(self: pointer, visible: bool): void {.importc: "QWebPage_statusBarVisibilityChangeRequested".}
proc fQWebPage_connect_statusBarVisibilityChangeRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_statusBarVisibilityChangeRequested".}
proc fcQWebPage_menuBarVisibilityChangeRequested(self: pointer, visible: bool): void {.importc: "QWebPage_menuBarVisibilityChangeRequested".}
proc fQWebPage_connect_menuBarVisibilityChangeRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_menuBarVisibilityChangeRequested".}
proc fcQWebPage_unsupportedContent(self: pointer, reply: pointer): void {.importc: "QWebPage_unsupportedContent".}
proc fQWebPage_connect_unsupportedContent(self: pointer, slot: int) {.importc: "QWebPage_connect_unsupportedContent".}
proc fcQWebPage_downloadRequested(self: pointer, request: pointer): void {.importc: "QWebPage_downloadRequested".}
proc fQWebPage_connect_downloadRequested(self: pointer, slot: int) {.importc: "QWebPage_connect_downloadRequested".}
proc fcQWebPage_focusedElementChanged(self: pointer, element: pointer): void {.importc: "QWebPage_focusedElementChanged".}
proc fQWebPage_connect_focusedElementChanged(self: pointer, slot: int) {.importc: "QWebPage_connect_focusedElementChanged".}
proc fcQWebPage_microFocusChanged(self: pointer, ): void {.importc: "QWebPage_microFocusChanged".}
proc fQWebPage_connect_microFocusChanged(self: pointer, slot: int) {.importc: "QWebPage_connect_microFocusChanged".}
proc fcQWebPage_contentsChanged(self: pointer, ): void {.importc: "QWebPage_contentsChanged".}
proc fQWebPage_connect_contentsChanged(self: pointer, slot: int) {.importc: "QWebPage_connect_contentsChanged".}
proc fcQWebPage_databaseQuotaExceeded(self: pointer, frame: pointer, databaseName: struct_miqt_string): void {.importc: "QWebPage_databaseQuotaExceeded".}
proc fQWebPage_connect_databaseQuotaExceeded(self: pointer, slot: int) {.importc: "QWebPage_connect_databaseQuotaExceeded".}
proc fcQWebPage_applicationCacheQuotaExceeded(self: pointer, origin: pointer, defaultOriginQuota: culonglong, totalSpaceNeeded: culonglong): void {.importc: "QWebPage_applicationCacheQuotaExceeded".}
proc fQWebPage_connect_applicationCacheQuotaExceeded(self: pointer, slot: int) {.importc: "QWebPage_connect_applicationCacheQuotaExceeded".}
